package com.codistrib.userservice.service.impl;

import com.codistrib.userservice.domain.enums.CredentialRequestStatus;
import com.codistrib.userservice.domain.model.CredentialRequest;
import com.codistrib.userservice.domain.model.PersonDI;
import com.codistrib.userservice.domain.repository.CredentialRequestRepository;
import com.codistrib.userservice.dto.CredentialRequestDtos;
import com.codistrib.userservice.exception.UserNotFoundException;
import com.codistrib.userservice.exception.ValidationException;
import com.codistrib.userservice.grpc.AuthServiceGrpcClient;
import com.codistrib.userservice.service.CredentialRequestService;
import com.codistrib.userservice.service.PersonDIService;
import com.codistrib.userservice.service.UserService;
import lombok.RequiredArgsConstructor;
import lombok.extern.slf4j.Slf4j;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;

import java.time.LocalDateTime;
import java.time.temporal.ChronoUnit;
import java.util.List;
import java.util.UUID;
import java.util.stream.Collectors;

/**
 * Impl√©mentation du service CredentialRequest
 */
@Service
@Transactional
@RequiredArgsConstructor
@Slf4j
public class CredentialRequestServiceImpl implements CredentialRequestService {

    private final CredentialRequestRepository credentialRequestRepository;
    private final UserService userService;
    private final PersonDIService personDIService;
    private final AuthServiceGrpcClient authServiceGrpcClient;

    @Override
    public CredentialRequest createCredentialRequest(UUID userId, UUID requestedBy, String requestedEmail) {
        log.info("Cr√©ation d'une demande de credentials: userId={}, requestedBy={}, email={}", 
                userId, requestedBy, requestedEmail);
        
        // V√©rifier que la PersonDI existe
        PersonDI personDI = personDIService.getPersonDIById(userId);
        
        // V√©rifier qu'il n'y a pas d√©j√† une demande PENDING
        if (hasPendingRequest(userId)) {
            throw new ValidationException("Une demande de credentials est d√©j√† en attente pour cette PersonDI");
        }
        
        // V√©rifier que l'email n'est pas d√©j√† demand√©
        if (isEmailAlreadyRequested(requestedEmail)) {
            throw new ValidationException("requestedEmail", 
                    "Cet email est d√©j√† utilis√© dans une autre demande en attente");
        }
        
        // Cr√©er la demande
        CredentialRequest request = CredentialRequest.builder()
                .userId(userId)
                .requestedBy(requestedBy)
                .requestedEmail(requestedEmail)
                .status(CredentialRequestStatus.PENDING)
                .build();
        
        CredentialRequest savedRequest = credentialRequestRepository.save(request);
        log.info("Demande de credentials cr√©√©e avec succ√®s: requestId={}", savedRequest.getRequestId());
        
        return savedRequest;
    }

    @Override
    @Transactional(readOnly = true)
    public CredentialRequest getCredentialRequestById(UUID requestId) {
        log.debug("R√©cup√©ration de la demande: requestId={}", requestId);
        return credentialRequestRepository.findById(requestId)
                .orElseThrow(() -> new UserNotFoundException("Demande avec l'ID " + requestId + " non trouv√©e"));
    }

    @Override
    public CredentialRequestDtos.ReviewCredentialRequestResponse reviewCredentialRequest(
            CredentialRequestDtos.ReviewCredentialRequestRequest request) {
        log.info("Traitement de la demande de credentials: requestId={}, approved={}", 
                request.getRequestId(), request.isApproved());
        
        CredentialRequest credentialRequest = getCredentialRequestById(request.getRequestId());
        
        // V√©rifier que la demande est en attente
        if (credentialRequest.getStatus() != CredentialRequestStatus.PENDING) {
            throw new ValidationException("Cette demande a d√©j√† √©t√© trait√©e. Statut: " + 
                    credentialRequest.getStatus());
        }
        
        PersonDI personDI = personDIService.getPersonDIById(credentialRequest.getUserId());
        
        if (request.isApproved()) {
            // APPROUV√â - Cr√©er les credentials dans Auth Service
            return approveCredentialRequest(credentialRequest, personDI, request);
        } else {
            // REJET√â
            return rejectCredentialRequest(credentialRequest, request);
        }
    }

    /**
     * Approuver une demande et cr√©er les credentials
     */
    private CredentialRequestDtos.ReviewCredentialRequestResponse approveCredentialRequest(
            CredentialRequest credentialRequest,
            PersonDI personDI,
            CredentialRequestDtos.ReviewCredentialRequestRequest request) {
        
        log.info("Approbation de la demande: requestId={}", credentialRequest.getRequestId());
        
        // Utiliser l'email fourni ou l'email de la demande
        String email = request.getEmail() != null ? request.getEmail() : credentialRequest.getRequestedEmail();
        
        // G√©n√©rer un mot de passe temporaire s√©curis√©
        String temporaryPassword = generateTemporaryPassword();
        
        // Appeler Auth Service via gRPC pour cr√©er les credentials
        UUID authId = createAuthCredentials(email, temporaryPassword, personDI);
        
        // Mettre √† jour la demande
        credentialRequest.setStatus(CredentialRequestStatus.APPROVED);
        credentialRequest.setReviewedBy(request.getReviewedBy());
        credentialRequest.setReviewedAt(LocalDateTime.now());
        credentialRequest.setAdminNotes(request.getAdminNotes());
        credentialRequestRepository.save(credentialRequest);
        
        // Mettre √† jour la PersonDI
        personDIService.updateCredentialRequestStatus(
                credentialRequest.getUserId(), 
                CredentialRequestStatus.APPROVED);
        
        // Mettre √† jour le User avec l'authId
        userService.updateAuthId(credentialRequest.getUserId(), authId);
        
        log.info("Credentials cr√©√©s avec succ√®s: userId={}, authId={}", 
                credentialRequest.getUserId(), authId);
        
        // TODO: Envoyer email au tuteur si sendCredentialsByEmail = true
        if (request.isSendCredentialsByEmail()) {
            sendCredentialsEmail(personDI, email, temporaryPassword);
        }
        
        return CredentialRequestDtos.ReviewCredentialRequestResponse.builder()
                .requestId(credentialRequest.getRequestId())
                .userId(credentialRequest.getUserId())
                .personName(personDI.getUser().getName())
                .status(CredentialRequestStatus.APPROVED)
                .authId(authId)
                .temporaryPassword(temporaryPassword)
                .credentialsSent(request.isSendCredentialsByEmail())
                .message("Credentials cr√©√©s avec succ√®s. Le tuteur peut maintenant se connecter.")
                .build();
    }

    /**
     * Rejeter une demande
     */
    private CredentialRequestDtos.ReviewCredentialRequestResponse rejectCredentialRequest(
            CredentialRequest credentialRequest,
            CredentialRequestDtos.ReviewCredentialRequestRequest request) {
        
        log.info("Rejet de la demande: requestId={}", credentialRequest.getRequestId());
        
        credentialRequest.setStatus(CredentialRequestStatus.REJECTED);
        credentialRequest.setReviewedBy(request.getReviewedBy());
        credentialRequest.setReviewedAt(LocalDateTime.now());
        credentialRequest.setAdminNotes(request.getAdminNotes());
        credentialRequestRepository.save(credentialRequest);
        
        // Mettre √† jour la PersonDI
        personDIService.updateCredentialRequestStatus(
                credentialRequest.getUserId(), 
                CredentialRequestStatus.REJECTED);
        
        PersonDI personDI = personDIService.getPersonDIById(credentialRequest.getUserId());
        
        return CredentialRequestDtos.ReviewCredentialRequestResponse.builder()
                .requestId(credentialRequest.getRequestId())
                .userId(credentialRequest.getUserId())
                .personName(personDI.getUser().getName())
                .status(CredentialRequestStatus.REJECTED)
                .credentialsSent(false)
                .message("Demande rejet√©e. Raison: " + 
                        (request.getAdminNotes() != null ? request.getAdminNotes() : "Non sp√©cifi√©e"))
                .build();
    }

    @Override
    @Transactional(readOnly = true)
    public List<CredentialRequest> getCredentialRequestsByStatus(CredentialRequestStatus status) {
        log.debug("R√©cup√©ration des demandes par statut: {}", status);
        return credentialRequestRepository.findByStatus(status);
    }

    @Override
    @Transactional(readOnly = true)
    public CredentialRequestDtos.PendingCredentialRequestsResponse getPendingRequests() {
        log.debug("R√©cup√©ration de toutes les demandes en attente");
        
        List<CredentialRequest> pendingRequests = credentialRequestRepository.findPendingRequestsOrderedByDate();
        
        // Calculer le nombre de jours de la plus ancienne demande
        int oldestDays = 0;
        if (!pendingRequests.isEmpty()) {
            LocalDateTime oldest = pendingRequests.get(0).getCreatedAt();
            oldestDays = (int) ChronoUnit.DAYS.between(oldest, LocalDateTime.now());
        }
        
        // Convertir en summary
        List<CredentialRequestDtos.CredentialRequestSummary> summaries = pendingRequests.stream()
                .map(this::toCredentialRequestSummary)
                .collect(Collectors.toList());
        
        return CredentialRequestDtos.PendingCredentialRequestsResponse.builder()
                .totalPending(summaries.size())
                .oldestDays(oldestDays)
                .requests(summaries)
                .build();
    }

    @Override
    @Transactional(readOnly = true)
    public List<CredentialRequest> getCredentialRequestsByHelper(UUID requestedBy) {
        log.debug("R√©cup√©ration des demandes du Helper: {}", requestedBy);
        return credentialRequestRepository.findByRequestedBy(requestedBy);
    }

    @Override
    @Transactional(readOnly = true)
    public CredentialRequest getPendingRequestByUserId(UUID userId) {
        return credentialRequestRepository.findPendingRequestByUserId(userId).orElse(null);
    }

    @Override
    @Transactional(readOnly = true)
    public boolean hasPendingRequest(UUID userId) {
        return credentialRequestRepository.hasPendingRequest(userId);
    }

    @Override
    @Transactional(readOnly = true)
    public boolean isEmailAlreadyRequested(String email) {
        return credentialRequestRepository.isEmailAlreadyRequested(email);
    }

    @Override
    @Transactional(readOnly = true)
    public CredentialRequestDtos.CredentialRequestStats getStats() {
        log.debug("Calcul des statistiques des demandes de credentials");
        
        long total = credentialRequestRepository.count();
        long pending = credentialRequestRepository.countByStatus(CredentialRequestStatus.PENDING);
        long approved = credentialRequestRepository.countByStatus(CredentialRequestStatus.APPROVED);
        long rejected = credentialRequestRepository.countByStatus(CredentialRequestStatus.REJECTED);
        
        double approvalRate = (total > 0) ? ((double) approved / total) * 100 : 0.0;
        
        // Calculer la dur√©e moyenne de traitement
        int averageProcessingDays = calculateAverageProcessingDays();
        
        return CredentialRequestDtos.CredentialRequestStats.builder()
                .totalRequests((int) total)
                .pendingRequests((int) pending)
                .approvedRequests((int) approved)
                .rejectedRequests((int) rejected)
                .approvalRate(approvalRate)
                .averageProcessingDays(averageProcessingDays)
                .build();
    }
    
    /**
     * Calculer la dur√©e moyenne de traitement en jours
     * Pour les demandes qui ont √©t√© trait√©es (APPROVED ou REJECTED)
     */
    private int calculateAverageProcessingDays() {
        // R√©cup√©rer toutes les demandes trait√©es
        List<CredentialRequest> approvedRequests = credentialRequestRepository
                .findByStatus(CredentialRequestStatus.APPROVED);
        List<CredentialRequest> rejectedRequests = credentialRequestRepository
                .findByStatus(CredentialRequestStatus.REJECTED);
        
        // Combiner les deux listes
        List<CredentialRequest> processedRequests = new java.util.ArrayList<>();
        processedRequests.addAll(approvedRequests);
        processedRequests.addAll(rejectedRequests);
        
        // Si aucune demande trait√©e, retourner 0
        if (processedRequests.isEmpty()) {
            return 0;
        }
        
        // Calculer la dur√©e pour chaque demande
        long totalDays = processedRequests.stream()
                .filter(cr -> cr.getReviewedAt() != null)  // S'assurer que reviewedAt existe
                .mapToLong(cr -> {
                    LocalDateTime createdAt = cr.getCreatedAt();
                    LocalDateTime reviewedAt = cr.getReviewedAt();
                    return java.time.temporal.ChronoUnit.DAYS.between(createdAt, reviewedAt);
                })
                .sum();
        
        // Compter combien de demandes ont effectivement une date de traitement
        long countWithReviewDate = processedRequests.stream()
                .filter(cr -> cr.getReviewedAt() != null)
                .count();
        
        // Calculer la moyenne
        if (countWithReviewDate == 0) {
            return 0;
        }
        
        int average = (int) (totalDays / countWithReviewDate);
        log.debug("Dur√©e moyenne de traitement calcul√©e: {} jours (sur {} demandes)", 
                average, countWithReviewDate);
        
        return average;
    }

    /**
     * M√©thode utilitaire pour convertir en Summary
     */
    private CredentialRequestDtos.CredentialRequestSummary toCredentialRequestSummary(
            CredentialRequest request) {
        
        String personName = userService.getUserById(request.getUserId()).getName();
        String helperName = userService.getUserById(request.getRequestedBy()).getName();
        
        int daysSinceCreated = (int) ChronoUnit.DAYS.between(request.getCreatedAt(), LocalDateTime.now());
        
        return CredentialRequestDtos.CredentialRequestSummary.builder()
                .requestId(request.getRequestId())
                .userId(request.getUserId())
                .personName(personName)
                .helperName(helperName)
                .requestedEmail(request.getRequestedEmail())
                .status(request.getStatus())
                .createdAt(request.getCreatedAt())
                .daysSinceCreated(daysSinceCreated)
                .build();
    }

    /**
     * G√©n√©rer un mot de passe temporaire s√©curis√©
     * 
     * Format : 12 caract√®res
     * - Au moins 1 majuscule
     * - Au moins 1 minuscule
     * - Au moins 1 chiffre
     * - Au moins 1 caract√®re sp√©cial
     */
    private String generateTemporaryPassword() {
        // Caract√®res autoris√©s par cat√©gorie
        String uppercase = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
        String lowercase = "abcdefghijklmnopqrstuvwxyz";
        String digits = "0123456789";
        String special = "!@#$%&*";
        
        // Utiliser SecureRandom pour cryptographie
        java.security.SecureRandom random = new java.security.SecureRandom();
        
        StringBuilder password = new StringBuilder(12);
        
        // Garantir au moins 1 caract√®re de chaque cat√©gorie
        password.append(uppercase.charAt(random.nextInt(uppercase.length())));
        password.append(lowercase.charAt(random.nextInt(lowercase.length())));
        password.append(digits.charAt(random.nextInt(digits.length())));
        password.append(special.charAt(random.nextInt(special.length())));
        
        // Compl√©ter avec des caract√®res al√©atoires (8 caract√®res restants)
        String allChars = uppercase + lowercase + digits + special;
        for (int i = 0; i < 8; i++) {
            password.append(allChars.charAt(random.nextInt(allChars.length())));
        }
        
        // M√©langer les caract√®res pour que les premiers ne soient pas toujours pr√©visibles
        char[] passwordArray = password.toString().toCharArray();
        for (int i = passwordArray.length - 1; i > 0; i--) {
            int j = random.nextInt(i + 1);
            char temp = passwordArray[i];
            passwordArray[i] = passwordArray[j];
            passwordArray[j] = temp;
        }
        
        String generatedPassword = new String(passwordArray);
        log.debug("Mot de passe temporaire g√©n√©r√© (longueur: {})", generatedPassword.length());
        
        return generatedPassword;
    }

    /**
     * Cr√©er des credentials dans Auth Service via gRPC
     * 
     * @param email Email pour les credentials
     * @param password Mot de passe temporaire
     * @param personDI PersonDI concern√©e
     * @return UUID authId cr√©√© dans Auth Service
     */
    private UUID createAuthCredentials(String email, String password, PersonDI personDI) {
        log.info("Cr√©ation de credentials dans Auth Service pour PersonDI: {} (userId={})",
                personDI.getUser().getName(), personDI.getUserId());
        
        try {
            // Appel gRPC vers Auth Service
            UUID authId = authServiceGrpcClient.createCredentialsForPersonDI(
                    personDI.getUserId(),
                    email,
                    password
            );
            
            log.info("‚úÖ Credentials cr√©√©s avec succ√®s dans Auth Service: authId={}", authId);
            return authId;
            
        } catch (Exception e) {
            log.error("‚ùå Erreur lors de la cr√©ation des credentials dans Auth Service: {}", 
                    e.getMessage(), e);
            throw new RuntimeException("Impossible de cr√©er les credentials dans Auth Service. " +
                    "Veuillez v√©rifier que Auth Service est accessible.", e);
        }
    }

    /**
     * Envoyer email au tuteur avec les credentials
     * 
     * TODO: Impl√©menter l'envoi email via Notification Service
     * 
     * Code √† impl√©menter :
     * 
     * @Autowired
     * private NotificationServiceGrpcClient notificationServiceGrpcClient;
     * 
     * notificationServiceGrpcClient.sendEmail(
     *     SendEmailRequest.builder()
     *         .to(email)
     *         .subject("Acc√®s cr√©√© pour " + personDI.getUser().getName() + " - CODI'strib")
     *         .body(generateEmailBody(personDI, email, temporaryPassword))
     *         .priority("HIGH")
     *         .build()
     * );
     * 
     * Le Notification Service doit exposer un endpoint gRPC :
     * rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
     */
    private void sendCredentialsEmail(PersonDI personDI, String email, String temporaryPassword) {
        log.warn("‚ö†Ô∏è TODO: Envoyer email via Notification Service");
        log.info("   Destinataire: {} ({})", personDI.getGuardianName(), email);
        log.info("   Sujet: Acc√®s cr√©√© pour {} - CODI'strib", personDI.getUser().getName());
        
        // G√©n√©rer le corps de l'email
        String emailBody = generateEmailBody(personDI, email, temporaryPassword);
        log.info("   Corps de l'email g√©n√©r√© (longueur: {} caract√®res)", emailBody.length());
        log.debug("   Aper√ßu: {}", emailBody.substring(0, Math.min(100, emailBody.length())));
        
        // TODO: Appeler Notification Service pour envoyer r√©ellement l'email
        log.info("   Email NON ENVOY√â (simulation uniquement)");
    }
    
    /**
     * G√©n√©rer le corps de l'email avec les credentials
     */
    private String generateEmailBody(PersonDI personDI, String email, String temporaryPassword) {
        return String.format("""
                Bonjour %s,
                
                Les identifiants pour %s ont √©t√© cr√©√©s avec succ√®s.
                
                üìß Email : %s
                üîê Mot de passe temporaire : %s
                
                ‚ö†Ô∏è IMPORTANT : 
                - Ce mot de passe est temporaire et doit √™tre chang√© lors de la premi√®re connexion.
                - Conservez ces informations en lieu s√ªr.
                - Ne partagez jamais votre mot de passe.
                
                Pour vous connecter :
                1. Rendez-vous sur l'application CODI'strib
                2. Utilisez l'email et le mot de passe ci-dessus
                3. Vous serez invit√© √† cr√©er un nouveau mot de passe
                
                En cas de difficult√©, contactez votre aidant ou l'administrateur.
                
                Cordialement,
                L'√©quipe CODI'strib
                
                ---
                Ceci est un email automatique, merci de ne pas y r√©pondre.
                """,
                personDI.getGuardianName(),
                personDI.getUser().getName(),
                email,
                temporaryPassword
        );
    }
}